# D7012E

Haskell/Lab1New/: CHANGELOG.md  LICENSE  Lab1New.cabal
Haskell/Lab1New/app/: Main.hs
Haskell/Lab1New/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/Lab1New/dist-newstyle/packagedb/ghc-9.4.8/: Lab1New-0.1.0.0-inplace.conf  package.cache
Haskell/Lab1New/src/: MyLib.hs
Haskell/Lab2New/: CHANGELOG.md  Lab2New.cabal
Haskell/Lab2New/app/: Main.hs
Haskell/Lab2New/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/Lab2New/dist-newstyle/packagedb/ghc-9.4.8/: Lab2New-0.1.0.0-inplace.conf  package.cache
Haskell/Lab2New/src/: MyLib.hs
Haskell/Lab3New/: CHANGELOG.md  Lab3New.cabal
Haskell/Lab3New/app/: Main.hs  TestProgram.hs
Haskell/Lab3New/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/lab1/: test.cabal
Haskell/lab2/app/: Main.hs
Haskell/lab3/: lab3.cabal
Haskell/lab3/src/: Expr.hs  Program.hs
Prolog/: lab1.pl  lab1.pl~  lab2.pl
Prolog/lab3/: .othello.pl.swo  lab3.pl  othello.pl  play.pl
Prolog/lab3/__MACOSX/: ._othello.pl  ._play.pl  ._rndBoard.pl  ._stupid.pl  ._testboards.pl  ._ttt.pl
lab2/: lab2.cabal
lab2/app/: Main.hs
lab3/app/: Main.hs
lab3/src/: .Statement.hs.swp  Expr.hs  Parser.hs  Statement.hs  TestProgram.hs  TestStatement.hs
test/app/: Main.hs
