cabal-version:      3.0
name:               Lab2New
version:            0.1.0.0
synopsis:           n
-- description:
homepage:           n
license:            MIT
license-file:       LICENSE
author:             Oscardahlberg
maintainer:         oscar.dahlberg1@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable Lab2New
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        Lab2New

    hs-source-dirs:   app
    default-language: Haskell2010
